Attempt at porting rotatedemo's differences (layering/rotated axis). Current bug: y axis is aligned to canvas top as opposed to bottom

--- a/html/scatterplot.css
+++ b/html/scatterplot.css
@@ -10,6 +10,11 @@ canvas {
 	left: 0;
 	right: 0;
 	margin: auto;
+}
+#mycan {
+	z-index: -2;
+}
+#axisl {
 	z-index: -1;
 }
 h3, h4 {
